--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,15 +1,14 @@
 {% extends "base_generic.html" %}
 
-{% block  %}
+{% block content %}
 	<h1>Local Library</h1>
 	<p>Welcome to LocalLibrary, a website Developed by <em>MdN in collab with rjocci</em>!!</p>
 	<h2>Dynamic Content</h2>
 	<p>The library has the following Record Counts:</p>
 	<ul>
-		<li><strong>Books:</strong>{{num_books}}</li>
-		<li><strong>Copies:</strong>{{num_instances}}</li>
-		<li><strong>Copies Available:</strong>{{num_instances_available}}</li>
-		<li><strong>Authors:</strong>{{num_authors}} </li>
+		<li><strong>Books: </strong>{{num_books}}</li>
+		<li><strong>Copies: </strong>{{num_instances}}</li>
+		<li><strong>Copies Available: </strong>{{num_instances_available}}</li>
+		<li><strong>Authors: </strong>{{num_authors}} </li>
 	</ul>
-
 {% endblock  %}
