--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base_generic.html" %}
 
+{% block title %} <title>Index |Local library </title>{% endblock %}
 {% block content %}
 	<h1>Local Library</h1>
 	<p>Welcome to LocalLibrary, a website Developed by <em>MdN in collab with rjocci</em>!!</p>
@@ -10,5 +11,7 @@
 		<li><strong>Copies: </strong>{{num_instances}}</li>
 		<li><strong>Copies Available: </strong>{{num_instances_available}}</li>
 		<li><strong>Authors: </strong>{{num_authors}} </li>
+		<li><strong>Genres Available: </strong>{{num_genres}}</li>
+		<!-- <li><strong>Authors with Name <em>James</em>: </strong>{{num_of_books_with_a}}</li> -->
 	</ul>
 {% endblock  %}
