--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -23,7 +23,7 @@
 					</ul>
 				{% endblock %}
 			</div>
-			<div class="col-sm-10">{% block content %}{% endblock %}</div>
+<div class="col-sm-10" style="background-image: linear-gradient(to right top, rgba(112, 87, 30, 0.3), rgba(30, 0, 0, 0.4));">{% block content %}{% endblock %}</div>
 		</div>
 	</div>
 </body>
