--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -1,20 +1,20 @@
-
 {% extends "base_generic.html" %}
-
+<html>
 {% block content %}
-
-<h1>Author: {{ author }} </h1>
-<p>{{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}}{% endif %}</p>
+<h1>Author: {{ author.last_name }}  {{author.first_name}}</h1>
 
 <div style="margin-left:20px;margin-top:20px">
-	<h4>Books</h4>
-
-	<dl>
-		{% for book in author.book_set.all %}
-		<dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
-		<dd>{{book.summary}}</dd>
-		{% endfor %}
-	</dl>
-
+	<p>{{author.date_of_birth}} , {{author.date_of_death}} </p>
 </div>
+<div style="margin-left:20px;margin-top:20px">
+		<strong>BOOKS BY {{author.last_name}}  {{author.first_name}} </strong>
+	<p>
+		{% for book in author.book_set.all  %}
+			<dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a>({{book.bookinstance_set.all.count}})</dt>
+			{{book.summary}}
+		{% endfor %}
+	</p>	
+</div>
+
+</html>
 {% endblock %}
