--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,3 +1,4 @@
+{# This is the form used to get the user's email address (for sending the password reset email).#}
 {% extends "base_generic.html" %}
 
 {% block content %}
