--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -19,6 +19,14 @@
 						<li><a href="{% url 'books' %}">All Books</a></li>
 						<li><a href="{% url 'authors'%}">All Authors</a></li>
 					</ul>
+					<ul> 
+							{% if user.is_authenticated %}
+								<li> User: {{user.get_username}}  Welcome {{user.get_username}}</li>
+								<li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
+							{% else %}
+								<li><a href="{% url 'login' %}?next={% url 'index' %}">Login</a></li>
+							{% endif %}
+					</ul>
 				{% endblock %}
 			</div>
 			<div class="col-sm-10" style="background-image: linear-gradient(to right top, rgba(112, 87, 30, 0.3), rgba(30, 0, 0, 0.4));">{% block content %}{% endblock %}</div>
