--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -20,9 +20,11 @@
 						<li><a href="{% url 'authors'%}">All Authors</a></li>
 					</ul>
 					<ul> 
-							{% if user.is_authenticated %}
-								<li> User: {{user.get_username}}  Welcome {{user.get_username}}</li>
-								<li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
+						{% if user.is_authenticated %}
+						<li> User: {{user.get_username}}  Welcome {{user.get_username}}</li>
+						
+							<li><a href="{% url 'my-borrowed' %}">My Borrowed Books</a></li>
+							<li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
 							{% else %}
 								<li><a href="{% url 'login' %}?next={% url 'index' %}">Login</a></li>
 							{% endif %}
