--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -26,9 +26,19 @@
 							<li><a href="{% url 'my-borrowed' %}">My Borrowed Books</a></li>
 							<li><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></li>
 							{% else %}
-								<li><a href="{% url 'login' %}?next={% url 'index' %}">Login</a></li>
+								<li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
 							{% endif %}
 					</ul>
+
+					{% if user.is_staff %}
+					<hr>
+					<ul>
+						<li>Staff</li>
+						{% if perms.catalog.can_mark_returned %}
+						<li><a href="{% url 'borrowed' %}">All borrowed</a></li>
+						{% endif %}
+					</ul>
+						{% endif %}
 				{% endblock %}
 			</div>
 			<div class="col-sm-10" style="background-image: linear-gradient(to right top, rgba(112, 87, 30, 0.3), rgba(30, 0, 0, 0.4));">{% block content %}{% endblock %}</div>
